update metrics dashboard

--- a/src/main/resources/webapp/metrics-dashboard.html
+++ b/src/main/resources/webapp/metrics-dashboard.html
@@ -20,8 +20,8 @@
   <meta charset="utf-8" />
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto">
   <script src="https://cdnjs.cloudflare.com/ajax/libs/echarts/5.4.3/echarts.min.js" integrity="sha512-EmNxF3E6bM0Xg1zvmkeYD3HDBeGxtsG92IxFt1myNZhXdCav9MzvuH/zNMBU1DmIPN6njrhX1VTbqdJxQ2wHDg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/gridstack.js/10.0.1/gridstack-all.min.js" integrity="sha512-gq8R31XSsOjp58K9qre4n5inuaUuAkz36qmdVx9Y1VpGtzmx06JlnVGLEDMISZH1Kh/M2X4Iip40WPD94kQW2w==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/gridstack.js/10.0.1/gridstack.min.css" integrity="sha512-RQiZSqRhRB5xAwqOKws34d14fPNaxoy59RNAUl2KXtT+5XfmspdKoNo1C2hR1bunSSLd4wNOz1bYcZjvuzN0hg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/gridstack.js/10.1.0/gridstack-all.min.js" integrity="sha512-HrBVB/mAEb1KuouvSb7sE9dR43ziTePw/IibQWjK34nl5Mdqj2Dy7tfh2yiNLjyDGEJK4hXTrjlk7myXERaOsA==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/gridstack.js/10.1.0/gridstack.min.css" integrity="sha512-GEMqAs1Ai2iirp6QhD4N5Qt7tDn1RGgF1CY2xp57LrX3vqTDehSC88IOFewV/L84htjbN7aazcK10FyzH+eXSA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
   <style type="text/css">
     body {
       font-family: 'Roboto', serif;
@@ -113,6 +113,7 @@
     echarts.registerTheme('demoTheme', demoTheme);
     const charts = {};
     const gridElements = {};
+    const gridMetrics = {};
     const grid = GridStack.init({
       float: false,
       column: 12,
@@ -134,24 +135,35 @@
     }
 
     const search = debounce(300, (event) => {
-      const searchItems = searchBox.value.split('|').map(k => k.trim()).filter(k => k);
-      for (const [key, elem] of Object.entries(gridElements)) {
-        let matches = searchItems.length == 0;
-        for (const searchItem of searchItems) {
-          if (searchItem && key.includes(searchItem)) {
-            matches = true;
-            break;
+      grid.batchUpdate(false);
+      try {
+        const searchItems = searchBox.value.split('|').map(k => k.trim().toLowerCase()).filter(k => k);
+        for (const [key, elem] of Object.entries(gridElements)) {
+          const nameEof = key.indexOf('/');
+          const name = (nameEof < 0) ? key : key.substring(0, nameEof);
+          if (!gridMetrics[name]) {
+            console.error('unable to find metric info', key, name);
+          }
+
+          let matches = searchItems.length == 0;
+          for (const searchItem of searchItems) {
+            if (key.toLowerCase().includes(searchItem) || gridMetrics[name].label.toLowerCase().includes(searchItem)) {
+              matches = true;
+              break;
+            }
+          }
+
+          const node = elem.parentNode.parentNode;
+          if (matches) {
+            grid.addWidget(node);
+          } else {
+            grid.removeWidget(node);
           }
         }
-
-        const node = elem.parentNode.parentNode;
-        if (matches) {
-          grid.addWidget(node);
-        } else {
-          grid.removeWidget(node);
-        }
+      } finally {
+        grid.compact(); // TODO: fix sorting
+        grid.batchUpdate(true);
       }
-      grid.compact();
     });
 
     const searchBox = document.getElementById('search');
@@ -190,12 +202,29 @@
       return items;
     }
 
+    const WEEKDAYS = ['Sun', 'Mon', 'Tue', 'Wed', 'Thu', 'Fri', 'Sat'];
+    function buildDayMarklines(lastInterval, window, count) {
+      const marklines = [];
+      const firstInterval = lastInterval - (window * count);
+      let lastDate = new Date(firstInterval);
+      for (let i = 0, ts = firstInterval; ts < lastInterval; ts += window, ++i) {
+        const d = new Date(ts);
+        if (lastDate.getDate() != d.getDate() || lastDate.getMonth() != d.getMonth() || lastDate.getFullYear() != d.getFullYear()) {
+          if (window < (60 * 60 * 1000) || d.getDay() == 0) {
+            marklines.push({ xAxis: i, label: {formatter: WEEKDAYS[d.getDay()] + ' ' + d.getDate()} });
+          }
+          lastDate = d;
+        }
+      }
+      return marklines;
+    }
+
     function renderTimeRangeCounter(metric) {
       const metricData = metric.data;
       const humanConverter = METRIC_UNIT_CONVERTER[metric.unit];
       newChart(metricKey(metric), metric.label, {
         animation: false,
-        grid: { left: 50, top: 15, right: 10, bottom: 42 },
+        grid: { left: 50, top: 10, right: 10, bottom: 42 },
         xAxis: {
           type: 'category',
           axisLabel: { fontSize: 8 },
@@ -223,7 +252,16 @@
         },
         dataZoom: [{ show: true, realtime: true, height: 14, bottom: 10, textStyle: { fontSize: 8 } }],
         series: [
-          { type: 'bar', name: metric.name, data: metricData.counters }
+          {
+            type: 'bar', name: metric.name, data: metricData.counters,
+            markLine: {
+              symbol:['none', 'none'],
+              emphasis: { disabled: true },
+              lineStyle: { color: '#aaa' },
+              label: {fontSize: 8, distance: 1},
+              data: buildDayMarklines(metricData.lastInterval, metricData.window, metricData.counters.length)
+            }
+          }
         ]
       });
     }
@@ -233,7 +271,7 @@
       const humanConverter = METRIC_UNIT_CONVERTER[metric.unit];
       newChart(metricKey(metric), metric.label, {
         animation: false,
-        grid: { left: 50, top: 15, right: 10, bottom: 42 },
+        grid: { left: 50, top: 10, right: 10, bottom: 42 },
         xAxis: {
           type: 'category',
           axisLabel: { fontSize: 8 },
@@ -275,7 +313,14 @@
             lineStyle: { width: 1 },
             emphasis: { focus: 'series' },
             showSymbol: false,
-            data: metricData.max
+            data: metricData.max,
+            markLine: {
+              symbol:['none', 'none'],
+              emphasis: { disabled: true },
+              lineStyle: { color: '#aaa' },
+              label: {fontSize: 8, distance: 1},
+              data: buildDayMarklines(metricData.lastInterval, metricData.window, metricData.count.length)
+            }
           },
           {
             name: 'avg',
@@ -366,7 +411,7 @@
 
       newChart(metricKey(metric), metric.label, {
         animation: false,
-        grid: { left: 50, top: 5, right: 5, bottom: 35 },
+        grid: { left: 50, top: 10, right: 5, bottom: 35 },
         tooltip: {
           confine: true,
           padding: 4,
@@ -423,6 +468,13 @@
               shadowBlur: 10,
               shadowColor: 'rgba(0, 0, 0, 0.5)'
             }
+          },
+          markLine: {
+            symbol:['none', 'none'],
+            emphasis: { disabled: true },
+            lineStyle: { color: '#aaa' },
+            label: {fontSize: 8, distance: 1},
+            data: buildDayMarklines(metricData.lastInterval, metricData.window, numIntervals)
           }
         }]
       });
@@ -472,9 +524,9 @@
         p99.push(Math.round(pValue[1]));
       }
 
-      newChart(metricKey(metric) + '_perc', metric.label, {
+      newChart(metricKey(metric) + '/perc', metric.label, {
         animation: false,
-        grid: { left: 50, top: 15, right: 10, bottom: 42 },
+        grid: { left: 50, top: 10, right: 10, bottom: 42 },
         xAxis: {
           type: 'category',
           axisLabel: { fontSize: 8 },
@@ -516,7 +568,14 @@
             lineStyle: { width: 1 },
             emphasis: { focus: 'series' },
             showSymbol: false,
-            data: metricData.maxValue
+            data: metricData.maxValue,
+            markLine: {
+              symbol:['none', 'none'],
+              emphasis: { disabled: true },
+              lineStyle: { color: '#aaa' },
+              label: {fontSize: 8, distance: 1},
+              data: buildDayMarklines(metricData.lastInterval, metricData.window, numIntervals)
+            }
           },
           {
             name: 'p99',
@@ -776,6 +835,7 @@
           continue;
         }
 
+        gridMetrics[metric.name] = { label: metric.label, unit: metric.unit, type: metric.type };
         for (const r of renderers) {
           r(metric);
         }
